applications/base/giftfeed/giftfeed-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: giftfeed-http-redirect
  namespace: ${release_env}-giftfeed
spec:
  hostnames:
    - "${giftfeed_domain}"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/acme-challenge/
      backendRefs: []
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: giftfeed-https
  namespace: ${release_env}-giftfeed
spec:
  hostnames:
    - "${giftfeed_domain}"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure-giftfeed
  rules:
    - backendRefs:
        - name: giftfeed
          port: 80
